<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory
        android:title="@string/cname_general"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false">
        <com.github.tttt55.materialyoupreferences.preferences.MaterialListPreference
            android:key="language"
            android:title="@string/language"
            android:summary="@string/language_s"
            android:entries="@array/languages"
            android:entryValues="@array/languages"
            app:allowDividerAbove="false"
            android:defaultValue="Use Device Language"
            app:icon="@drawable/language" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialListPreference
            android:key="checker_interval"
            android:title="@string/checker_interval"
            android:summary="@string/checker_interval_s"
            android:entries="@array/checker_interval_list"
            android:entryValues="@array/checker_interval_list"
            android:defaultValue="4 hour"
            app:allowDividerAbove="false"
            app:icon="@drawable/check_interval"/>
        <com.github.tttt55.materialyoupreferences.preferences.MaterialListPreference
            android:key="checker_type"
            android:title="@string/itype"
            android:summary="@string/itype_s"
            android:entries="@array/app_type"
            android:entryValues="@array/app_type"
            android:defaultValue="NULL"
            app:allowDividerAbove="false"
            app:icon="@drawable/installation_type"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cname_behavior" app:iconSpaceReserved="false" app:allowDividerAbove="false">
        <com.github.tttt55.materialyoupreferences.preferences.MaterialSwitchGooglePreference
            android:key="send_notification"
            android:title="@string/send_notif"
            android:enabled="false"
            app:allowDividerAbove="false"
            android:summary="@string/send_notif_s"
            android:defaultValue="true"
            app:icon="@drawable/send_notification"/>
        <com.github.tttt55.materialyoupreferences.preferences.MaterialSwitchGooglePreference
            android:key="use_mobile_data"
            android:title="@string/use_mobile_data"
            android:summary="@string/use_mobile_data_s"
            android:defaultValue="false"
            app:allowDividerAbove="false"
            app:icon="@drawable/mobile_data" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialSwitchGooglePreference
            android:key="12_hour_rule"
            android:title="@string/hour12_rule"
            app:icon="@drawable/hour_12_rule"
            app:allowDividerAbove="false"
            android:summary="@string/hour12_rule_s"
            android:defaultValue="false" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialSwitchGooglePreference
            android:key="crash_logger"
            android:title="@string/crash_logs"
            android:defaultValue="true"
            app:allowDividerAbove="false"
            app:icon="@drawable/show_crash_logs"
            android:summary="@string/crash_logs_s" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialSwitchGooglePreference
            android:key="disable_error_notifications"
            android:title="@string/disable_error"
            android:defaultValue="false"
            app:icon="@drawable/bell_off"
            app:allowDividerAbove="false"
            android:summary="@string/disable_error_s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cname_about" app:iconSpaceReserved="false" app:allowDividerAbove="false">
        <com.github.tttt55.materialyoupreferences.preferences.MaterialPreference
            android:key="source_code"
            android:title="@string/source_code"
            app:allowDividerAbove="false"
            android:summary="@string/source_code_s"
            app:icon="@drawable/source_code_2" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialPreference
            android:key="updater_guide"
            app:allowDividerAbove="false"
            android:title="@string/updater_guide"
            android:summary="@string/updater_guide_s"
            app:icon="@drawable/updater_guide"/>
        <com.github.tttt55.materialyoupreferences.preferences.MaterialPreference
            android:key="create_issue"
            app:allowDividerAbove="false"
            android:title="@string/create_issue"
            android:summary="@string/create_issue_s"
            app:icon="@drawable/create_issue" />
        <com.github.tttt55.materialyoupreferences.preferences.MaterialPreference
            android:key="app_version"
            android:title="@string/app_version"
            android:summary="_appVersion"
            app:allowDividerAbove="false"
            app:icon="@drawable/app_info" />
    </PreferenceCategory>
</PreferenceScreen>
