<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_info">

    <fragment
        android:id="@+id/nav_info"
        android:name="me.mamiiblt.instafel.updater.fragments.InfoFragment"
        android:label="@string/status"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_logs"
        android:name="me.mamiiblt.instafel.updater.fragments.LogsFragment"
        android:label="@string/logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="me.mamiiblt.instafel.updater.fragments.SettingsFragment"
        android:label="@string/settings" />

</navigation>
