<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_ifl"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checker_itype"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"/>

    <RadioGroup
        android:id="@+id/install_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_unclone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Unclone"/>
        <RadioButton
            android:id="@+id/radio_clone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clone"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Installation Method"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"/>

    <RadioGroup
        android:id="@+id/method_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Root"/>
        <RadioButton
            android:id="@+id/radio_shizuku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shizuku"/>

    </RadioGroup>

    <Button
        android:id="@+id/continue_button"
        android:onClick="next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:layout_marginTop="24dp"/>
</LinearLayout>
